# mcp-web-interaction-toolkit

./: .gitignore  README.md  __init__.py  analyze_clickbank_api.py  api_discovery.py  api_discovery_enhanced.py  clickbank_final_solution.py  clickbank_next_data.json  clickbank_real_login.py  examples.md  extract_clickbank_js.py  extract_csrf_token.py  intercept_real_request.py  login_with_env.py  mcp.json  mcp_api_discovery_integration.py  pyproject.toml  secure_login_clickbank.py  server.py  server_enhanced.py  server_integrated.py  test_clickbank_direct.py  test_clickbank_enhanced.py  test_clickbank_mcp.py  test_enhanced.py  test_integrated.py  tests.py
